# mpu9250-imu-ros

./: BUILD  CMakeLists.txt
catkin_ws/src/usb_imu/: CMakeLists.txt  frames.gv  package.xml
catkin_ws/src/usb_imu/launch/: usb_imu.launch
catkin_ws/src/usb_imu/src/: SyncIMU.cpp  SyncIMU.h  init_rt.h  main.cpp
catkin_ws/src/vec3_display/: CMakeLists.txt  package.xml
catkin_ws/src/vec3_display/src/: main.cpp  pumper.h
src/hidapi/: f
src/hidapi/hidtest/: Makefile.am  hid_mpu  hid_mpu.cpp  hid_mpu_lu  hidtest.cpp
src/hidapi/install/usr/local/lib/: libhidapi-hidraw.la  libhidapi-hidraw.so.0.0.0  libhidapi-libusb.la  libhidapi-libusb.so.0.0.0
src/hidapi/install/usr/local/lib/pkgconfig/: hidapi-hidraw.pc  hidapi-libusb.pc
src/imu_host/: CMakeLists.txt  accel_solver.h  gsl-lite.hpp  hid.cpp  hid.h  hid_mpu.cpp  hid_mpu.h  imu_host.pro  main.cpp  quaternion.cpp  quaternion.h
